other-cel/topologyspreadconstraints-policy/topologyspreadconstraints-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: topologyspreadconstraints-policy
  annotations:
    policies.kyverno.io/title: Spread Pods Across Nodes & Zones in CEL expressions
    kyverno.io/kubernetes-version: "1.26-1.27"
    kyverno.io/kyverno-version: 1.11.0
    policies.kyverno.io/category: Sample in CEL 
    policies.kyverno.io/description: >-
      Deployments to a Kubernetes cluster with multiple availability zones often need to
      distribute those replicas to align with those zones to ensure site-level failures
      do not impact availability. This policy ensures topologySpreadConstraints are defined, 
      to spread pods over nodes and zones. Deployments or Statefulsets with less than 3 
      replicas are skipped.
    policies.kyverno.io/minversion: 1.11.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Deployment, StatefulSet
spec:
  background: true
  failurePolicy: Ignore
  validationFailureAction: Audit
  rules:
    - name: spread-pods
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
              operations:
              - CREATE
              - UPDATE
      celPreconditions:
        - name: "replicas-must-be-3-or-more"
          expression: "object.spec.replicas >= 3"
      validate:
        cel:
          expressions:
            - expression: >-
                has(object.spec.template.spec.topologySpreadConstraints) && 
                size(object.spec.template.spec.topologySpreadConstraints.filter(t, t.topologyKey == 'kubernetes.io/hostname' || t.topologyKey == 'topology.kubernetes.io/zone')) == 2
              message: "topologySpreadConstraint for kubernetes.io/hostname & topology.kubernetes.io/zone are required"
